precompiles/utils/macro/tests/precompile/compile-fail/test/generic-arg.stderr
error[E0412]: cannot find type `R` in this scope
  --> tests/precompile/compile-fail/test/generic-arg.rs:23:63
   |
23 |     fn foo(handle: &mut impl PrecompileHandle, arg: BoundedBytes<R>) -> EvmResult {
   |                                                                  ^ not found in this scope
   |
help: you might be missing a type parameter
   |
21 | impl<R: Get<u32>> Precompile<R><R> {
   |                             +++
